--- a/eastern_botz/pubspec.yaml
+++ b/eastern_botz/pubspec.yaml
@@ -1,5 +1,5 @@
 name: eastern_botz
-description: A new Flutter project.
+description: Eastern Botz
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -58,9 +58,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-   assets:
-     - assets/EBZ.jpg
-     -
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
